# schemata-py

./: README.md  pyproject.toml
.github/workflows/: test.yml  update-schemas.yml
schemata/: __init__.py  _registry_map.py  registry.py
tests/: test_registry.py
